// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL: Transaction transaction should fetch transaction by ID 1`] = `
Object {
  "date": "2019-04-26",
  "id": "1",
  "price": 375000,
}
`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] within date range 1`] = `
Array [
  Object {
    "date": "2013-10-23",
    "id": "65",
    "price": 100000,
  },
  Object {
    "date": "2013-12-03",
    "id": "67",
    "price": 130000,
  },
  Object {
    "date": "2013-12-18",
    "id": "18",
    "price": 125000,
  },
]
`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] within date range: 2nd page 1`] = `
Array [
  Object {
    "date": "2015-10-15",
    "id": "455",
    "price": 765000,
  },
  Object {
    "date": "2015-10-30",
    "id": "431",
    "price": 757055,
  },
  Object {
    "date": "2015-10-30",
    "id": "453",
    "price": 745000,
  },
]
`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] without criteria 1`] = `
Array [
  Object {
    "date": "2007-08-22",
    "id": "36",
    "price": 229400,
  },
  Object {
    "date": "2013-10-23",
    "id": "65",
    "price": 100000,
  },
  Object {
    "date": "2013-12-03",
    "id": "67",
    "price": 130000,
  },
]
`;
